# paideia

./: .editorconfig  .env.example  .gitignore  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  ENGINE_LOG.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  LICENSE  NOTICE  PROJECT_SETUP.md  README.md  ROADMAP.md  SECURITY.md  STATE.md  content-strategy.md  design-reasoning.md  expansion.md  infogenesis_report_for_paideia.md  learner-model.md  pedagogy.md  prep-paideia-prompt-pack.md  pyproject.toml  reading-system.md  session-lifecycle.md  tensions.md  ui-architecture.md
.claude/: settings.json
.claude/commands/: start-engine.md  start-routine.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  cleanup.yml  config.yml  documentation.yml  enhancement.yml  health-check-finding.yml  question.yml  tech-debt.yml  upstream.yml
.github/workflows/: validate.yml
_archive/: philosophy-graph-seed-v0.1.json  philosophy-graph-seed-v0.2.json
adr/: 0002-commercial-sustainability-without-pedagogical-compromise.md  0003-supplementary-media-as-metadata-not-structure.md  0006-domain-agnostic-architecture.md  0007-cross-domain-porosity.md  0010-continuous-contextual-assessment.md  0012-freshman-defaults-autodidact-ceiling.md  0014-sonnet-teaches-opus-reviews.md  0015-event-sourced-learner-model.md  0016-graph-construction-needs-live-validation.md  0017-postgres-recursive-ctes-over-owl-rdf.md  0018-flat-domain-tags-community-detection.md  0020-teaching-notes-separate-from-summary.md  0022-periodic-project-health-checks.md  0023-engagement-depth-aggregation.md  0025-historical-maximum-tracking.md  0027-rendering-policy-prompt-layer-contract.md  0028-input-side-scope-structural-not-prompt.md  0029-personal-financial-cost-ceiling.md  0030-confidence-level-evidentiary-mode-on-nodes.md  0032-personal-project-disposition.md  0033-mission-realignment-structured-guidance-for-self-learners.md  0034-discovery-planning-engagement-triad.md  0035-multi-platform-apple-expansion.md  0036-expression-contract-for-inward-documents.md  0037-engine-product-wall-and-changelog-rename.md  README.md
build_plan/: 00_preamble.md  00_session_schedule.md  MANIFEST.md  M_partition_migration.md  P_0_contract_lock.md  P_1_sql_schema.md  P_2_graph_validation.md  P_3_input_dataset_survey.md  P_4_seed_graph_build.md  P_5_retrieval_mastery_decisions.md  P_6_self_correction.md  P_7_teaching_layer.md  P_8_evaluation_harness.md  P_9_ui_prototype.md
docs/: CROSS_REFERENCES.md  MISSION.md  architecture.md  business.md  content-strategy.md  ideation.md  infrastructure.md  learner-model.md  mempalace.yaml  pedagogy.md  prep-paideia-prompt-pack.md  self-correction.md  session-lifecycle.md  tensions.md  ui-architecture.md
docs/health-checks/: README.md  S-0030.md  S-0041.md  S-0052.md  S-0065.md  S-0077.md  S-0097.md  S-0121.md  S-0141.md  S-0162.md  S-0184.md  S-0204.md  TEMPLATE.md
docs/operations/: README.md  adr-authoring.md  document-voice.md  escalation-criteria.md  health-check.md  mempalace-operations.md  mempalace-tagging-conventions.md  seed-chunked-authoring.md  session-build-lifecycle.md  session-shutdown-sequence.md  sub-agent-validation.md  tools-sweep-worktrees.md  tools-validate-interpretation.md
docs/pedagogy/: inferences.md
engine/: ENGINE_LOG.md  STATE.md  scheduled_audits.json
engine/adr/: 0016-graph-construction-needs-live-validation.md  0022-periodic-project-health-checks.md  0036-expression-contract-for-inward-documents.md  0037-engine-product-wall-and-changelog-rename.md  0038-expression-contract-for-ai-authored-code.md  0039-universal-expression-contract-across-ai-authoring-patterns.md  0040-build-readiness-gate-before-substantive-build-sessions.md  0041-cascade-analysis-discipline.md  0042-soft-warn-lifecycle-archive-canon.md  0043-hook-architecture.md  0044-skill-conversion-recipe-vs-reference.md  0045-shared-state-integrity-discipline.md  0047-structural-reference-parser-tool-and-adversarial-triage-workflow.md  0048-handoff-narrowing-and-github-issues-for-cross-session-deferrals.md  0049-scope-lock-at-boot-and-descope-reorder-audit-at-shutdown.md  0050-project-venv-and-hook-path-wiring.md  0051-routine-mode-and-engine-loop.md  0052-routine-boot-freshness-and-concurrency-defense.md  0053-mechanism-first-exercise-gate.md  0054-lifecycle-push-wrapping-against-default-branch-push-gate.md  0055-apply-migration-wrapping-against-production-reads-gate.md  0056-mempalace-mechanical-adoption-checks.md  0057-adversarial-stance-for-health-check-audits.md  0058-canonical-timestamp-format-and-helper.md  0059-audit-time-structural-reference-fetching.md  0060-routine-wedge-detect-and-pause.md  0062-retire-adr-inline-amendments-and-governed-doc-soft-warns.md  0063-validator-tiered-runtime-targets-and-regression-soft-warn.md  0064-uv-lockfile-and-reproducible-builds.md  0065-validate-py-mirror-to-ci.md  0066-pr-template-and-branch-protection.md  0067-gitleaks-pre-commit-secret-scanning.md  0068-bandit-sast-pre-commit-and-ci.md  0069-dependabot-pip-and-actions-ecosystems.md  0070-project-wired-review-skill.md  0071-project-wired-security-review-skill.md  0072-frontend-discipline-skill.md  0073-paideia-frontend-overlays-skill.md  0074-pytest-cov-coverage-floor.md  0075-github-issue-templates.md  (+17 more)
engine/build_readiness/: README.md  adversarial_stance_first_exercise.md  apply_migration_first_exercise.md  apply_migration_postcondition_first_exercise.md  bandit_first_exercise.md  build_lifecycle_push_first_exercise.md  ci_mirror_first_exercise.md  dependabot_visibility_first_exercise.md  embedding_storage_first_exercise.md  engine_apparatus_improvements_s0042.md  engine_memory_substrate_first_exercise.md  fetch_structural_reference_first_exercise.md  gitleaks_first_exercise.md  governed_doc_soft_warns_first_exercise.md  graph_audit_subprocess_first_exercise.md  mempalace_mechanical_adoption_first_exercise.md  (+21 more)
product/: AGENT_INSTRUCTIONS.md  CHANGELOG.md
session/: current.json  register_state.json
tools/: setup.sh  validate.py
(+622 files in other folders)
