[project]
name = "paideia"
version = "0.0.0"
description = "Knowledge mastery app on a pedagogical dependency graph. Engine-side tooling — see engine/STATE.md."
requires-python = ">=3.12"

# Source-of-truth for engine-tool dependencies per ADR 0064 (S-0127).
# Floor pins; uv.lock holds the exact transitive-resolved versions.
# Refresh procedure: see engine/operations/dependency-discipline.md.
#
# When changing a dep below, also run `uv lock` so uv.lock reflects the
# new transitive graph. Pre-commit validate.py emits the
# `uv_lock_out_of_date` soft-warn when pyproject.toml is staged without
# the matching lockfile regeneration.
dependencies = [
    # Code-discipline gate stack per ADR 0038 (Layer 2 mechanical gates).
    "ruff>=0.15.12",
    "mypy>=2.1.0",
    "pytest>=8.0.0",

    # Coverage gate per ADR 0074 (S-0136, Issue #71). Measures fraction of
    # engine/tools/ exercised by the pytest suite; CI fails below
    # floor = baseline - 2pp. Trend-watching, not aspirational gate.
    # Config in [tool.coverage] below; CI invocation in
    # .github/workflows/validate.yml.
    "pytest-cov>=4.0.0",

    # SAST gate per ADR 0068 (S-0132, Issue #70). Bandit catches semantic
    # vulnerabilities (eval, subprocess shell=True, weak random for tokens,
    # hardcoded credentials) that ruff/mypy don't. Pre-commit + CI gate;
    # config at engine/tools/bandit.yaml. Floor pinned; uv.lock holds exact.
    "bandit>=1.9.4",

    # Phase 4+ live-graph audit per ADR 0016. psycopg v3 binary build
    # (zero-toolchain install). Activated only when SUPABASE_DB_URL is set.
    "psycopg[binary]>=3.3.4",

    # MemPalace shared-state probe — engine/tools/probe_palace.py per ADR 0045.
    # Pinned explicitly even though mempalace re-exposes it transitively, so
    # probe_palace's expected version is independent of mempalace's pin.
    "chromadb>=1.5.9",

    # Phase 4.6+ structural-reference parser per ADR 0047. HTMLInputAdapter
    # uses BeautifulSoup4 for SEP/IEP HTML normalization.
    "beautifulsoup4>=4.14.3",

    # Phase 5+ structural-reference parser PDF adapter per ADR 0047 decision 6
    # + Issue #34 (S-0096). pdfplumber for outline/font-metrics, pypdfium2 for
    # bulk text extraction (~30x speed at encyclopedia scale). pypdfium2 is
    # also a pdfplumber transitive but pinned explicitly so the expected
    # version is independent of pdfplumber's pin.
    "pdfplumber>=0.11.0",
    "pypdfium2>=4.0.0",

    # Test-only — engine/tools/test_parse_structural_reference.py uses
    # reportlab to synthesize PDF fixtures in-test (mirrors the SYNTHETIC_HTML
    # inline-string pattern for HTMLInputAdapter tests). Kept in the main
    # dep set rather than split into a dev-deps group — splitting via
    # PEP 735 dependency-groups is a deferred refinement when the test
    # surface justifies the indirection.
    "reportlab>=4.0.0",

    # MemPalace — semantic-memory store, MCP server, Stop/PreCompact hook
    # capture. Per ADR 0050 mempalace runs from the project venv. Floor
    # bumped at S-0084 to capture `mempalace repair-status` (3.3.4). Floor
    # bumped at S-0145 to 3.3.5 for the recovery-side improvements (#1342
    # quarantine_stale_hnsw + #1396 tool_search retry + #1322 client-side
    # quarantine wiring) — see ADR 0079. Per the S-0084 user directive,
    # mempalace version strings live only here — ADR/ops-doc prose
    # references the version as a forensic timestamp ("as observed at
    # S-NNNN") rather than asserting a specific version.
    "mempalace>=3.3.5",
]

[tool.uv]
# Lockfile generated and committed per ADR 0064. Regenerate with `uv lock`
# only when dependencies change — no drive-by refreshes mid-session.
# Pre-commit gate (validate.py: validate_uv_lock_freshness) catches drift.
package = false

# Coverage config per ADR 0074 (S-0136, Issue #71). Chosen pyproject.toml-
# rooted config over a separate `.coveragerc` to match the project's
# config-in-pyproject pattern (ruff, mypy, pytest already live here;
# bandit is the lone exception because bandit requires YAML).
#
# Line coverage only (branch = false). Branch coverage adds noise without
# proportional value at this corpus size; revisit if line-coverage gate
# produces too many false-positive passes.
#
# `omit` exclusion list discipline per ADR 0074 decision 6: each entry
# must have an inline reason comment. Adding a new omit requires the
# same-session reason annotation — silent suppressions accumulate.
[tool.coverage.run]
source = ["engine/tools"]
omit = [
    "engine/tools/test_*.py",          # tests themselves, not the subject
    "engine/tools/_venv_reexec.py",    # exec-replaces; coverage cannot trace
    "engine/tools/conftest.py",        # pytest fixture loader
]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false
