[project]
name = "paideia"
version = "0.0.0"
description = "Knowledge mastery app on a pedagogical dependency graph. Engine-side tooling — see engine/STATE.md."
requires-python = ">=3.12"

# Source-of-truth for engine-tool dependencies per ADR 0064 (S-0127).
# Floor pins; uv.lock holds the exact transitive-resolved versions.
# Refresh procedure: see engine/operations/dependency-discipline.md.
#
# When changing a dep below, also run `uv lock` so uv.lock reflects the
# new transitive graph. Pre-commit validate.py emits the
# `uv_lock_out_of_date` soft-warn when pyproject.toml is staged without
# the matching lockfile regeneration.
dependencies = [
    # Code-discipline gate stack per ADR 0038 (Layer 2 mechanical gates).
    "ruff>=0.15.12",
    "mypy>=2.1.0",
    "pytest>=9.0.3",

    # Coverage gate per ADR 0074 (S-0136, Issue #71). Measures fraction of
    # engine/tools/ exercised by the pytest suite; CI fails below
    # floor = baseline - 2pp. Trend-watching, not aspirational gate.
    # Config in [tool.coverage] below; CI invocation in
    # .github/workflows/validate.yml.
    "pytest-cov>=7.1.0",

    # SAST gate per ADR 0068 (S-0132, Issue #70). Bandit catches semantic
    # vulnerabilities (eval, subprocess shell=True, weak random for tokens,
    # hardcoded credentials) that ruff/mypy don't. Pre-commit + CI gate;
    # config at engine/tools/bandit.yaml. Floor pinned; uv.lock holds exact.
    "bandit>=1.9.4",

    # Phase 4+ live-graph audit per ADR 0016. psycopg v3 binary build
    # (zero-toolchain install). Activated only when SUPABASE_DB_URL is set.
    "psycopg[binary]>=3.3.4",

    # Phase 4.6+ structural-reference parser per ADR 0047. HTMLInputAdapter
    # uses BeautifulSoup4 for SEP/IEP HTML normalization.
    "beautifulsoup4>=4.14.3",

    # Phase 5+ structural-reference parser PDF adapter per ADR 0047 decision 6
    # + Issue #34 (S-0096). pdfplumber for outline/font-metrics, pypdfium2 for
    # bulk text extraction (~30x speed at encyclopedia scale). pypdfium2 is
    # also a pdfplumber transitive but pinned explicitly so the expected
    # version is independent of pdfplumber's pin.
    "pdfplumber>=0.11.0",
    "pypdfium2>=5.8.0",

    # Test-only — engine/tools/test_parse_structural_reference.py uses
    # reportlab to synthesize PDF fixtures in-test (mirrors the SYNTHETIC_HTML
    # inline-string pattern for HTMLInputAdapter tests). Kept in the main
    # dep set rather than split into a dev-deps group — splitting via
    # PEP 735 dependency-groups is a deferred refinement when the test
    # surface justifies the indirection.
    "reportlab>=4.5.1",

    # Per ADR 0092 (S-0198): per-session changelog entry frontmatter
    # validation against engine/schemas/changelog-entry.schema.json.
    # Consumers: engine/tools/changelog_aggregate.py, engine/tools/validate.py
    # (check_changelog_entries). Draft 2020-12 dialect.
    "jsonschema>=4.25.0",
]

[tool.pytest.ini_options]
# Repo-root on PYTHONPATH so absolute imports work in tests. Required by
# the engine-memory package per ADR 0091 — `engine/memory/test_*.py`
# uses `from engine.memory.connection import get_conn` (matches the
# absolute imports inside `engine/memory/mcp_server.py`). The existing
# `engine/tools/test_*.py` files use direct module imports
# (`from check_target import ...`), which continue to work because
# pytest's default `prepend` import mode also adds the test's directory
# to sys.path. Adding `.` here is additive — both patterns coexist.
pythonpath = ["."]

[tool.mypy]
# Namespace-package support for the absolute-import paradigm used by the
# engine-memory package (per ADR 0091). Without explicit_package_bases,
# mypy resolves engine/memory/schema.py both as `schema` (closest
# non-__init__.py dir) and as `engine.memory.schema` (when imported via
# the repo root), producing the "Source file found twice" error.
#
# Discovery: at S-0189, validate.py's per-file mypy invocation
# (`mypy --strict <file_args>`) was the surfacing path. The flag is
# additive; engine/tools/ files keep resolving as their direct module
# names because they sit one directory deep and have no parent
# __init__.py either.
explicit_package_bases = true
namespace_packages = true
# mypy_path is colon-separated. Repo root resolves engine.* / product.*
# absolute imports; engine/tools resolves the sibling-import pattern
# used by engine/tools/{check_routine_scope,routine_lifecycle_push,
# build_lifecycle_push,...}.py — they import each other via bare module
# names (`import check_routine_scope`) and the test files do likewise
# via `sys.path.insert(0, str(Path(__file__).resolve().parent))` at
# runtime. mypy doesn't follow sys.path manipulation; without engine/tools
# on mypy_path, every commit touching these files surfaces "Cannot find
# implementation or library stub for module named 'check_routine_scope'"
# import-not-found errors and the pre-commit code-gates hard-fail.
# Surfaced at S-0192 (resolving Issue #139's wrapper fixes): same import
# pattern, never explicitly aligned in mypy config.
mypy_path = ".:engine/tools"

[tool.uv]
# Lockfile generated and committed per ADR 0064. Regenerate with `uv lock`
# only when dependencies change — no drive-by refreshes mid-session.
# Pre-commit gate (validate.py: validate_uv_lock_freshness) catches drift.
package = false

# Coverage config per ADR 0074 (S-0136, Issue #71). Chosen pyproject.toml-
# rooted config over a separate `.coveragerc` to match the project's
# config-in-pyproject pattern (ruff, mypy, pytest already live here;
# bandit is the lone exception because bandit requires YAML).
#
# Line coverage only (branch = false). Branch coverage adds noise without
# proportional value at this corpus size; revisit if line-coverage gate
# produces too many false-positive passes.
#
# `omit` exclusion list discipline per ADR 0074 decision 6: each entry
# must have an inline reason comment. Adding a new omit requires the
# same-session reason annotation — silent suppressions accumulate.
[tool.coverage.run]
source = ["engine/tools"]
omit = [
    "engine/tools/test_*.py",          # tests themselves, not the subject
    "engine/tools/_venv_reexec.py",    # exec-replaces; coverage cannot trace
    "engine/tools/conftest.py",        # pytest fixture loader
]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false
